# merlin

./: .gitignore  INSTALL.txt  Makefile  README.md  _oasis  _tags  merlin_lang.install  merlin_lang.opam  myocamlbuild.ml  setup.ml
examples/defense/: defense.dot  defense.mln
examples/iot/: iot.dot  iot.mln
examples/max/: max.dot  max.exp  max.mln
examples/min/: min.dot  min.mln
examples/ton/: did.mln  ip-multicast.mln  isolation.mln  mapreduce.mln  transforms.mln
lib/: .merlin  META  Merlin.ml  Merlin_BigGraph.ml  Merlin_Click.ml  Merlin_Controller.ml  Merlin_Controller.mli  Merlin_Dictionaries.ml  Merlin_Error.ml  Merlin_FrontEnd.ml  Merlin_Generate.ml  Merlin_Globals.ml  Merlin_Gurobi.ml  Merlin_Human.ml  Merlin_Invariants.ml  Merlin_Invariants.mli  Merlin_LP.ml  Merlin_LPBuffer.ml  Merlin_LPPretty.ml  Merlin_LPTypes.ml  Merlin_Lexer.mll  Merlin_NFA.ml  Merlin_NFA.mli  Merlin_OpenFlow.ml  Merlin_OpenFlow.mli  Merlin_Parser.mly  Merlin_Policy.ml  Merlin_Preprocess.ml  Merlin_Pretty.ml  Merlin_QConfig.ml  Merlin_RRT.mli  Merlin_Server.ml  Merlin_Sinktree.ml  Merlin_Sinktree.mli  Merlin_Stats.ml  Merlin_TC.ml  Merlin_Time.ml  Merlin_Topology.ml  Merlin_Types.ml  Merlin_Util.ml  (+3 more)
test/: .merlin  Test.ml  Test_Click.ml  Test_Generate.ml  Test_Merlin_Parser.ml  Test_Parser.ml  Test_Queue.ml  Test_Regex.ml  Test_Solve.ml  Test_Solver.ml  Test_TC.ml  Test_TON.ml  Test_Topology_Parser.ml  jbuild
test/preprocess_cases/: 001.dot  001.expected  001.mln
test/pretty_cases/: 001.mln.expected  acadelegate.mln.expected  academia.mln.expected  bidiamond.mln.expected  (+8 more)
(+16 files in other folders)
