opam-version: "1.2"
available: [ ocaml-version >= "4.04.0" ]
version: "4.1.0"
maintainer: "Shrutarshi Basu <basus@cs.cornell.edu>"
authors: "Shrutarshi Basu <basus@cs.cornell.edu>, Robert Soule
<robert.soule@usi.ch>, Nate Foster <jnfoster@cs.cornell.edu>"
homepage: "http://merlin-lang.org"
bug-reports: "https://github.com/merlin-lang/merlin/issues"
dev-repo: "https://github.com/merlin-lang/merlin.git"
depends: [
  "ocamlfind" {build}
  "oasis" {build}
  "cppo" {build}
  "menhir" {build}
  "dprle"
  "mtime"
  "mtime.clock"
  "core"   {>= "0.9.0"}
  "ppx_jane"
  "ppx_import"
  "ppx_deriving"
  "ppx_inline_test"
  "sedlex"
  "async"  {>= "0.9.0"}
  "async_extended"
  "alcotest"
  "cstruct" {>= "1.0.1"}
  "cstruct-async"
  "frenetic" {>= "4.0"}
  "frenetic.async" {>= "4.0"}
  "ocamlgraph" {>= "1.8.7"}
]
